objects/Location__c.object
<CustomObject>
    <description>Locations</description>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>Code of the Country in Callejero / VUC</description>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <description>Name of the Country</description>
        <label>Country Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEPARTAMENTOMU__c</fullName>
        <description>DEPARTAMENTO ID from CV Callejero</description>
        <label>DEPARTAMENTOMU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryDeactivator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delivery Deactivator</description>
        <inlineHelpText>Delivery Deactivator</inlineHelpText>
        <label>Delivery Deactivator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryEndDate__c</fullName>
        <description>Delivery End Date</description>
        <inlineHelpText>Delivery End Date</inlineHelpText>
        <label>Delivery End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeliveryExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delivery Express</description>
        <inlineHelpText>Delivery Express</inlineHelpText>
        <label>Delivery Express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeliveryStartDate__c</fullName>
        <description>Delivery Start Date</description>
        <inlineHelpText>Delivery Start Date</inlineHelpText>
        <label>Delivery Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DepartmentCode__c</fullName>
        <description>Department Code</description>
        <label>DepartmentCode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentName__c</fullName>
        <description>Name of the Department</description>
        <label>Department Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCALIDADMU__c</fullName>
        <description>LOCALIDAD ID from CV Callejero</description>
        <label>LOCALIDADMU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationCode__c</fullName>
        <description>Location Code</description>
        <externalId>true</externalId>
        <label>LocationCode</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <description>Name of the Municipality where the Location is located.</description>
        <label>Municipality</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal Code of the Location</description>
        <externalId>true</externalId>
        <label>Postal Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Commercial Region to which the Location belongs. Used by Marketing to define Eligibility Rules fro Products and Offers</description>
        <externalId>true</externalId>
        <inlineHelpText>Commercial Region to which the Location belongs. Used by Marketing to define Eligibility Rules fro Products and Offers</inlineHelpText>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <label>StateCode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateName__c</fullName>
        <description>State or Province Name</description>
        <label>State Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status</description>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>DepartmentCode__c</columns>
        <columns>LocationCode__c</columns>
        <columns>StateCode__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>